--- a/index.html
+++ b/index.html
@@ -49,15 +49,17 @@
     </style>
 
     <script type="importmap">
-    {
-      "imports": {
-        "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-        "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-        "react/": "https://esm.sh/react@^19.2.3/",
-        "react": "https://esm.sh/react@^19.2.3"
-      }
-    }
-    </script>
+{
+  "imports": {
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "react": "https://esm.sh/react@^19.2.3",
+    "@vercel/node": "https://esm.sh/@vercel/node@^5.5.16",
+    "mongodb": "https://esm.sh/mongodb@^7.0.0"
+  }
+}
+</script>
   </head>
   <body>
     <div id="root"></div>
