--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Lora:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
-    <!-- Process Shim for Browser/Vite environments -->
+    <!-- Process Shim for Browser environments -->
     <script>
       if (typeof window.process === 'undefined') {
         window.process = { env: {} };
@@ -55,15 +55,15 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
-    "@vercel/node": "https://esm.sh/@vercel/node@^5.5.16",
-    "mongodb": "https://esm.sh/mongodb@^7.0.0"
+    "mongodb": "https://esm.sh/mongodb@^7.0.0",
+    "@vercel/node": "https://esm.sh/@vercel/node@^5.5.16"
   }
 }
 </script>
   </head>
   <body>
     <div id="root"></div>
-    <!-- Explicitly load the application entry point -->
+    <!-- Application entry point -->
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
