--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
-    "mongodb": "https://esm.sh/mongodb@^7.0.0",
-    "@vercel/node": "https://esm.sh/@vercel/node@^5.5.16"
+    "@vercel/node": "https://esm.sh/@vercel/node@^5.5.16",
+    "mongodb": "https://esm.sh/mongodb@^7.0.0"
   }
 }
 </script>
